tests/baselines/reference/ComputedPropertyName18.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName18.ts(1,13): error TS1005: ';' expected.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName18.ts (1 errors) ====
    var v: { [e]?(): number };
                ~
!!! error TS1005: ';' expected.